@@ -1,0 +1,8 @@
+#!/usr/bin/perl
+
+use v5.14;
+use warnings;
+
+use Test::More tests => 1;
+
+use_ok('Bot::Backbone::Service::SlackChat');
