@@ -2,6 +2,12 @@
 
     * Added the on_channel_joined helper to make it easy to react when a bot is
       invited to channels.
+    * Fixed an internal work around that depended on
+      https://github.com/mihyaeru21/p5-WebService-Slack-WebApi/issues/4 being
+      fixed (which it was in the v0.04 release).
+    * Added a documentation of the caveat that Slack does not allow bot accounts
+      to invite themselves into channels.
+    * Added tests!
 
 0.161740  2016-06-22 19:57:20-04:00 America/New_York
 
